Update gci configuration to use sections instead of local-prefixes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,7 +20,10 @@ linters-settings:
     default-signifies-exhaustive: false
 
   gci:
-    local-prefixes: muscle-dreamer
+    sections:
+      - standard
+      - default
+      - prefix(muscle-dreamer)
 
   goconst:
     min-len: 2
