--- a/.golangci.yml
+++ b/.golangci.yml
@@ -292,7 +292,8 @@ run:
   modules-download-mode: readonly
   allow-parallel-runners: true
 
-  skip-dirs:
+issues:
+  exclude-dirs:
     - bin
     - vendor
     - var
@@ -301,12 +302,13 @@ run:
     - node_modules
     - docs
 
-  skip-files:
+  exclude-files:
     - ".*\\.pb\\.go$"
     - ".*\\.gen\\.go$"
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
   uniq-by-line: true
