Replace deprecated exportloopref with copyloopvar

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -187,7 +187,7 @@ linters:
     - durationcheck
     - errorlint
     - exhaustive
-    - exportloopref
+    - copyloopvar
     - forcetypeassert
     - gci
     - gochecknoinits
