--- a/.golangci.yml
+++ b/.golangci.yml
@@ -239,7 +239,7 @@ linters:
     # Exclude some linters from running on tests files.
     - path: _test\.go
       linters:
-        - gomnd
+        - mnd
         - goconst
         - dupl
         - lll
