--- a/.golangci.yml
+++ b/.golangci.yml
@@ -259,7 +259,7 @@ linters:
     # ECS specific exclusions
     - path: internal/core/ecs/
       linters:
-        - gomnd  # Magic numbers are common in ECS for performance
+        - mnd  # Magic numbers are common in ECS for performance
       text: "Magic number"
 
     - path: internal/core/ecs/types.go
