Replace deprecated tenv with usetesting

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -215,7 +215,7 @@ linters:
     - sqlclosecheck
     - stylecheck
     - tagliatelle
-    - tenv
+    - usetesting
     - testpackage
     - thelper
     - tparallel
