Replacing mnd with gomnd linter in settings section

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -57,7 +57,7 @@ linters-settings:
   goimports:
     local-prefixes: muscle-dreamer
 
-  mnd:
+  gomnd:
         checks: 
           - argument
           - case
