Replacing copyloopvar with exportloopref linter in enabled linters list

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -185,7 +185,7 @@ linters:
     - durationcheck
     - errorlint
     - exhaustive
-    - copyloopvar
+    - exportloopref
     - forcetypeassert
     - gci
     - gochecknoinits
