Replacing last occurrence of mnd with gomnd in ECS exclusions

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -258,7 +258,7 @@ linters:
     # ECS specific exclusions
     - path: internal/core/ecs/
       linters:
-        - mnd  # Magic numbers are common in ECS for performance
+        - gomnd  # Magic numbers are common in ECS for performance
       text: "Magic number"
 
     - path: internal/core/ecs/types.go
